--- a/notes.html
+++ b/notes.html
@@ -35,9 +35,7 @@
 
   <!-- Footer -->
 
-  <footer class="site-footer">
-
-  </footer>
+  {% include footer.html %}
 
   <script src="assets/js/jquery-2.1.4.min.js"></script>
   <script src="assets/js/functiononnotes.js" type="text/javascript"></script>
