--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
   <!-- About -->
 
-  <div class="about-title">
+  <div class="page-title">
     <h4>.about</h4>
   </div>
 
@@ -138,6 +138,26 @@
       </div>
       <div class="skills-unit skills-7">
         <h3>Laser Cutting</h3>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="skills-unit skills-8">
+        <h3>Photoluminescence</h3>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="skills-unit skills-9">
+        <h3>IV Measurement</h3>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="skills-unit skills-8">
+        <h3>EQE Measurement</h3>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="skills-unit skills-7">
+        <h3>Ellipsometry</h3>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="skills-unit skills-9">
+        <h3>Relection and Transmission Measurement</h3>
         <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
       </div>
     </div>
