--- a/notes.html
+++ b/notes.html
@@ -17,7 +17,7 @@
   <!-- hero -->
 
   <section class="notes">
-    <div class="notes-title">
+    <div class="page-title">
       <h4>.notes</h4>
     </div>
 
