--- a/about.html
+++ b/about.html
@@ -157,7 +157,19 @@
         <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
       </div>
       <div class="skills-unit skills-9">
-        <h3>Relection and Transmission Measurement</h3>
+        <h3>Relection Measurement</h3>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="skills-unit skills-9">
+        <h3>Transmission Measurement</h3>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="skills-unit skills-7">
+        <h3>Profilometer</h3>
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+      </div>
+      <div class="skills-unit skills-7">
+        <h3>Four Point Probe</h3>
         <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
       </div>
     </div>
