--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@
     </div>
     <div class="experience-container">
       <div class="experience-unit">
-        <h3 class="experience-unit-title">Job Description</h3>
-        <h5 class="experience-unit-place">Place goes here <span>year here</span></h5>
+        <h3 class="experience-unit-title">Research Assistant</h3>
+        <h5 class="experience-unit-place">GUNAM <span>2014- present</span></h5>
         <p class="experience-unit-description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
