--- a/about.html
+++ b/about.html
@@ -175,6 +175,14 @@
     </div>
   </section>
 
+  <!-- More to come -->
+
+  <section class="alt-section" id="experience">
+    <div class="experience-title">
+      <h3 class="section-title">.more to come</h3>
+    </div>
+  </section>
+
   <!-- Footer -->
 
   {% include footer.html %}
