--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
 
   <section class="alt-section" id="about">
     <div class="container">
-      <p>I am an Indonesian research assistant in Advanced Photonics and Photovoltaics (APP) group at The Center of Solar Energy Research and Applications (GUNAM) at Middle East Technical University (METU). I am now working towards my master of science degree
-        in Micro and Nanotechnology program under supervision of Asst. Prof. Selcuk Yerci. I graduated from Physics department of METU in 2014 with high honour degree. My main research evolves around the fabrication of thin crystalline silicon solar cells
+      <p>I am an <a href="https://en.wikipedia.org/wiki/Indonesia">Indonesian</a> research assistant in Advanced Photonics and Photovoltaics <a href="http://app.mnt.metu.edu.tr">(APP)</a> group at The Center of Solar Energy Research and Applications <a href="http://gunam.metu.edu.tr">(GUNAM)</a> at Middle East Technical University <a href="http://metu.edu.tr">(METU)</a>. I am now working towards my master of science degree
+        in Micro and Nanotechnology program under supervision of <a href="http://app.mnt.metu.edu.tr/selcuk-yerci">Asst. Prof. Selcuk Yerci</a>. I graduated from Physics department of METU in 2014 with high honour degree. My main research evolves around the fabrication of thin crystalline silicon solar cells
         with advanced light trapping. My side projects include thin silicon peeling with stressor layer and liquid epitaxy of germanium on insulator. </p>
-      <p>When I am not doing research, I enjoy tweaking my Android phone (LG G3). I often lurk around in XDA-Developers forum where you can get almost everything related to Android tweaking and development. I recently took up a hobby of web development,
+      <p>When I am not doing research, I enjoy tweaking my Android phone (LG G3). I often lurk around in <a href="http://forum.xda-developers.com">XDA-Developers</a> forum where you can get almost everything related to Android tweaking and development. I recently took up a hobby of web development,
         both designing and coding. This site is an example of my hobby that has turned into a live product.</p>
     </div>
   </section>
@@ -93,16 +93,13 @@
     <div class="experience-container">
       <div class="experience-unit">
         <h3 class="experience-unit-title">Research Assistant</h3>
-        <h5 class="experience-unit-place">GUNAM <span>2014- present</span></h5>
+        <h5 class="experience-unit-place">GUNAM <span>2014 - present</span></h5>
         <p class="experience-unit-description">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
-      </div>
-      <div class="experience-unit">
-        <h3 class="experience-unit-title">Job Description</h3>
-        <h5 class="experience-unit-place">Place goes here <span>year here</span></h5>
-        <p class="experience-unit-description">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          I mainly work on fabrication of thin single crystal silicon solar cells with advanced light trapping.
+          <br>
+          I also work on liquid epitaxy of germanium on silicon along with <a href="http://app.mnt.metu.edu.tr/people"> Zisan Irem Ozyurt</a>.
+          <br>
+          Other work that I am also involved includes thin silicon peeling off with stressor layer. The work is now currently carried out by <a href="http://app.mnt.metu.edu.tr/people">Hande Gunduzoz</a>.
         </p>
       </div>
     </div>
